--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </div>
 
 <div id="outside">
-    <h4>Hello Anonymous!</h4>
+    <h4>Hello Anonymous! Log in to Vote for your favorite Pokemon Team!</h4>
     <button id="loginBtn">Log In</button>
 </div>
 
